--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -139,337 +139,16 @@
         </tr>
       </table>
       <table class="table course test" id="courseForWeek">
+      <% for(let i=1;i<16;i++){ %>
         <tr>
+        <% for(let j=1;j<6;j++){ %>
           <td>
-            <h5 id="1-1-1"></h5>
-            <p id="1-1-2"></p>
+            <h5 id="<%= i+'-'+j+'-1' %>"></h5>
+            <p id="<%= i+'-'+j+'-2' %>"></p>
           </td>
-          <td>
-            <h5 id="1-2-1"></h5>
-            <p id="1-2-2"></p>
-          </td>
-          <td>
-            <h5 id="1-3-1"></h5>
-            <p id="1-3-2"></p>
-          </td>
-          <td>
-            <h5 id="1-4-1"></h5>
-            <p id="1-5-2"></p>
-          </td>
-          <td>
-            <h5 id="1-5-1"></h5>
-            <p id="1-5-2"></p>
-          </td>
+        <% } %>
         </tr>
-        <tr>
-          <td>
-            <h5 id="2-1-1"></h5>
-            <p id="2-1-2"></p>
-          </td>
-          <td>
-            <h5 id="2-2-1"></h5>
-            <p id="2-2-2"></p>
-          </td>
-          <td>
-            <h5 id="2-3-1"></h5>
-            <p id="2-3-2"></p>
-          </td>
-          <td>
-            <h5 id="2-4-1"></h5>
-            <p id="2-4-2"></p>
-          </td>
-          <td>
-            <h5 id="2-5-1"></h5>
-            <p id="2-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="3-1-1"></h5>
-            <p id="3-1-2"></p>
-          </td>
-          <td>
-            <h5 id="3-2-1"></h5>
-            <p id="3-2-2"></p>
-          </td>
-          <td>
-            <h5 id="3-3-1"></h5>
-            <p id="3-3-2"></p>
-          </td>
-          <td>
-            <h5 id="3-4-1"></h5>
-            <p id="3-4-2"></p>
-          </td>
-          <td>
-            <h5 id="3-5-1"></h5>
-            <p id="3-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="4-1-1"></h5>
-            <p id="4-1-2"></p>
-          </td>
-          <td>
-            <h5 id="4-2-1"></h5>
-            <p id="4-2-2"></p>
-          </td>
-          <td>
-            <h5 id="4-3-1"></h5>
-            <p id="4-3-2"></p>
-          </td>
-          <td>
-            <h5 id="4-4-1"></h5>
-            <p id="4-4-2"></p>
-          </td>
-          <td>
-            <h5 id="4-5-1"></h5>
-            <p id="4-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="5-1-1"></h5>
-            <p id="5-1-2"></p>
-          </td>
-          <td>
-            <h5 id="5-2-1"></h5>
-            <p id="5-2-2"></p>
-          </td>
-          <td>
-            <h5 id="5-3-1"></h5>
-            <p id="5-3-2"></p>
-          </td>
-          <td>
-            <h5 id="5-4-1"></h5>
-            <p id="5-4-2"></p>
-          </td>
-          <td>
-            <h5 id="5-5-1"></h5>
-            <p id="5-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="6-1-1"></h5>
-            <p id="6-1-2"></p>
-          </td>
-          <td>
-            <h5 id="6-2-1"></h5>
-            <p id="6-2-2"></p>
-          </td>
-          <td>
-            <h5 id="6-3-1"></h5>
-            <p id="6-3-2"></p>
-          </td>
-          <td>
-            <h5 id="6-4-1"></h5>
-            <p id="6-4-2"></p>
-          </td>
-          <td>
-            <h5 id="6-5-1"></h5>
-            <p id="6-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="7-1-1"></h5>
-            <p id="7-1-2"></p>
-          </td>
-          <td>
-            <h5 id="7-2-1"></h5>
-            <p id="7-2-2"></p>
-          </td>
-          <td>
-            <h5 id="7-3-1"></h5>
-            <p id="7-3-2"></p>
-          </td>
-          <td>
-            <h5 id="7-4-1"></h5>
-            <p id="7-4-2"></p>
-          </td>
-          <td>
-            <h5 id="7-5-1"></h5>
-            <p id="7-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="8-1-1"></h5>
-            <p id="8-1-2"></p>
-          </td>
-          <td>
-            <h5 id="8-2-1"></h5>
-            <p id="8-2-2"></p>
-          </td>
-          <td>
-            <h5 id="8-3-1"></h5>
-            <p id="8-3-2"></p>
-          </td>
-          <td>
-            <h5 id="8-4-1"></h5>
-            <p id="8-4-2"></p>
-          </td>
-          <td>
-            <h5 id="8-5-1"></h5>
-            <p id="8-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="9-1-1"></h5>
-            <p id="9-1-2"></p>
-          </td>
-          <td>
-            <h5 id="9-2-1"></h5>
-            <p id="9-2-2"></p>
-          </td>
-          <td>
-            <h5 id="9-3-1"></h5>
-            <p id="9-3-2"></p>
-          </td>
-          <td>
-            <h5 id="9-4-1"></h5>
-            <p id="9-4-2"></p>
-          </td>
-          <td>
-            <h5 id="9-5-1"></h5>
-            <p id="9-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="10-1-1"></h5>
-            <p id="10-1-2"></p>
-          </td>
-          <td>
-            <h5 id="10-2-1"></h5>
-            <p id="10-2-2"></p>
-          </td>
-          <td>
-            <h5 id="10-3-1"></h5>
-            <p id="10-3-2"></p>
-          </td>
-          <td>
-            <h5 id="10-4-1"></h5>
-            <p id="10-4-2"></p>
-          </td>
-          <td>
-            <h5 id="10-5-1"></h5>
-            <p id="10-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="11-1-1"></h5>
-            <p id="11-1-2"></p>
-          </td>
-          <td>
-            <h5 id="11-2-1"></h5>
-            <p id="11-2-2"></p>
-          </td>
-          <td>
-            <h5 id="11-3-1"></h5>
-            <p id="11-3-2"></p>
-          </td>
-          <td>
-            <h5 id="11-4-1"></h5>
-            <p id="11-4-2"></p>
-          </td>
-          <td>
-            <h5 id="11-5-1"></h5>
-            <p id="11-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="12-1-1"></h5>
-            <p id="12-1-2"></p>
-          </td>
-          <td>
-            <h5 id="12-2-1"></h5>
-            <p id="12-2-2"></p>
-          </td>
-          <td>
-            <h5 id="12-3-1"></h5>
-            <p id="12-3-2"></p>
-          </td>
-          <td>
-            <h5 id="12-4-1"></h5>
-            <p id="12-4-2"></p>
-          </td>
-          <td>
-            <h5 id="12-5-1"></h5>
-            <p id="12-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="13-1-1"></h5>
-            <p id="13-1-2"></p>
-          </td>
-          <td>
-            <h5 id="13-2-1"></h5>
-            <p id="13-2-2"></p>
-          </td>
-          <td>
-            <h5 id="13-3-1"></h5>
-            <p id="13-3-2"></p>
-          </td>
-          <td>
-            <h5 id="13-4-1"></h5>
-            <p id="13-4-2"></p>
-          </td>
-          <td>
-            <h5 id="13-5-1"></h5>
-            <p id="13-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="14-1-1"></h5>
-            <p id="14-1-2"></p>
-          </td>
-          <td>
-            <h5 id="14-2-1"></h5>
-            <p id="14-2-2"></p>
-          </td>
-          <td>
-            <h5 id="14-3-1"></h5>
-            <p id="14-3-2"></p>
-          </td>
-          <td>
-            <h5 id="14-4-1"></h5>
-            <p id="14-4-2"></p>
-          </td>
-          <td>
-            <h5 id="14-5-1"></h5>
-            <p id="14-5-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="15-1-1"></h5>
-            <p id="15-1-2"></p>
-          </td>
-          <td>
-            <h5 id="15-2-1"></h5>
-            <p id="15-2-2"></p>
-          </td>
-          <td>
-            <h5 id="15-3-1"></h5>
-            <p id="15-3-2"></p>
-          </td>
-          <td>
-            <h5 id="15-4-1"></h5>
-            <p id="15-4-2"></p>
-          </td>
-          <td>
-            <h5 id="15-5-1"></h5>
-            <p id="15-5-2"></p>
-          </td>
-        </tr>
-
+      <% } %>
       </table>
     </div>
     <div id="containerForWeekend">
@@ -480,190 +159,21 @@
         </tr>
       </table>
       <table class="table course test" style="opacity: 0" id="courseForWeekend">
+      <% for(let i=1;i<16;i++){ %>
         <tr>
+        <% for(let j=6;j<8;j++){ %>
           <td>
-            <h5 id="1-6-1"></h5>
-            <p id="1-6-2"></p>
+            <h5 id="<%= i+'-'+j+'-1' %>"></h5>
+            <p id="<%= i+'-'+j+'-2' %>"></p>
           </td>
-          <td>
-            <h5 id="1-7-1"></h5>
-            <p id="1-7-2"></p>
-          </td>
+        <% } %>
         </tr>
-        <tr>
-          <td>
-            <h5 id="2-6-1"></h5>
-            <p id="2-6-2"></p>
-          </td>
-          <td>
-            <h5 id="2-7-1"></h5>
-            <p id="2-7-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="3-6-1"></h5>
-            <p id="3-6-2"></p>
-          </td>
-          <td>
-            <h5 id="3-7-1"></h5>
-            <p id="3-7-2"></p>
-          </td>
-
-        </tr>
-        <tr>
-          <td>
-            <h5 id="4-6-1"></h5>
-            <p id="4-6-2"></p>
-          </td>
-          <td>
-            <h5 id="4-7-1"></h5>
-            <p id="4-7-2"></p>
-          </td>
-
-        </tr>
-        <tr>
-          <td>
-            <h5 id="5-6-1"></h5>
-            <p id="5-6-2"></p>
-          </td>
-          <td>
-            <h5 id="5-7-1"></h5>
-            <p id="5-7-2"></p>
-          </td>
-
-        </tr>
-        <tr>
-          <td>
-            <h5 id="6-6-1"></h5>
-            <p id="6-6-2"></p>
-          </td>
-          <td>
-            <h5 id="6-7-1"></h5>
-            <p id="6-7-2"></p>
-          </td>
-
-        </tr>
-        <tr>
-          <td>
-            <h5 id="7-6-1"></h5>
-            <p id="7-6-2"></p>
-          </td>
-          <td>
-            <h5 id="7-7-1"></h5>
-            <p id="7-7-2"></p>
-          </td>
-
-        </tr>
-        <tr>
-          <td>
-            <h5 id="8-6-1"></h5>
-            <p id="8-6-2"></p>
-          </td>
-          <td>
-            <h5 id="8-7-1"></h5>
-            <p id="8-7-2"></p>
-          </td>
-
-        </tr>
-        <tr>
-          <td>
-            <h5 id="9-6-1"></h5>
-            <p id="9-6-2"></p>
-          </td>
-          <td>
-            <h5 id="9-7-1"></h5>
-            <p id="9-7-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="10-6-1"></h5>
-            <p id="10-6-2"></p>
-          </td>
-          <td>
-            <h5 id="10-7-1"></h5>
-            <p id="10-7-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="11-6-1"></h5>
-            <p id="11-6-2"></p>
-          </td>
-          <td>
-            <h5 id="11-7-1"></h5>
-            <p id="11-7-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="12-6-1"></h5>
-            <p id="12-6-2"></p>
-          </td>
-          <td>
-            <h5 id="12-7-1"></h5>
-            <p id="12-7-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="13-6-1"></h5>
-            <p id="13-6-2"></p>
-          </td>
-          <td>
-            <h5 id="13-7-1"></h5>
-            <p id="13-7-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="14-6-1"></h5>
-            <p id="14-6-2"></p>
-          </td>
-          <td>
-            <h5 id="14-7-1"></h5>
-            <p id="14-7-2"></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h5 id="15-6-1"></h5>
-            <p id="15-6-2"></p>
-          </td>
-          <td>
-            <h5 id="15-7-1"></h5>
-            <p id="15-7-2"></p>
-          </td>
-        </tr>
+      <% } %>
       </table>
     </div>
-
   </div>
-  <!--
-     <table id = " " class = " ">       //一到五的class和id
-    for(1~15){
-      for(1~5){       //星期一到五
-        用h5建立表格  並標示id
-        用p建立表格   並標示id
-      }
-    }
-    <table id = " " class = " ">       //六日的class和id
-    for(1~15){
-      for(6~7){       //星期六到日
-      用h5建立表格  並標示id
-      用p建立表格   並標示id
-    }
-    }
-    
-  
-  
-  
--->
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../../js/courses.js"></script>
 </body>
-
 </html>
